# aharker_externals

./: .gitmodules  CMakeLists.txt  Makefile  Pipfile  README.md
.github/workflows/: build-all.yml  build-macos.yml  build-optional.yaml  build-package.yml  build-sequence.yml  build-via-make.yml  build-windows-make.yml  build-windows.yml  builder.yml
source/conversion/valconvert/: CMakeLists.txt
source/conversion/valconvert~/: CMakeLists.txt
source/convolution/kernelmaker~/: CMakeLists.txt
source/convolution/partconvolve~/: CMakeLists.txt
source/convolution/timeconvolve~/: CMakeLists.txt
source/descriptors/descriptorsrt~/: CMakeLists.txt
source/descriptors/descriptors~/: CMakeLists.txt
source/descriptors/entrymatcher/: CMakeLists.txt  database_view.cpp
source/descriptors/entrymatcher_tilde/: CMakeLists.no  CMakeLists.txt
source/dynamic-suite/Common/: thread_set.cpp  thread_set.hpp
source/dynamic-suite/dynamic.in~/: CMakeLists.txt
source/dynamic-suite/dynamic.out~/: CMakeLists.txt
source/dynamic-suite/dynamic.patch~/: CMakeLists.txt
source/dynamic-suite/dynamic.request~/: CMakeLists.txt
source/dynamic-suite/dynamicdsp~/: CMakeLists.txt  dynamicdsp~.cpp
source/dynamic-suite/dynamicserial~/: CMakeLists.txt  dynamicserial~.cpp
source/ibuffer-suite/ibufconcatenatedrive~/: CMakeLists.txt
source/ibuffer-suite/ibufconcatenate~/: CMakeLists.txt
source/ibuffer-suite/ibuffer_access/: CMakeLists.txt
source/ibuffer-suite/ibuffermulti~/: CMakeLists.txt
source/ibuffer-suite/ibuffer~/: CMakeLists.txt
source/ibuffer-suite/ibufinfo~/: CMakeLists.txt
source/ibuffer-suite/ibufplayer~/: CMakeLists.txt
source/includes/: SIMDSupport.hpp
source/miscellaneous/ajh.wiiremote/: CMakeLists.no
source/miscellaneous/meandev/: CMakeLists.txt
source/random-numbers/ahnoise~/: CMakeLists.txt
source/random-numbers/randfloats/: CMakeLists.txt
source/random-numbers/randomvals~/: CMakeLists.txt
source/sample-accurate-suite/rbiquad~/: CMakeLists.txt
source/scripts/: install_mkl.bat  install_mkl.py  regen_linker_flags.sh  update.py
source/scripts/cmake/: fn_add_max_external.cmake  fn_add_msp_external.cmake
source/threading/schedulemessage/: CMakeLists.txt
source/threading/threadfilter/: CMakeLists.txt
source/utility/macaddress/: CMakeLists.txt
source/vMSP/vabs~/: vabs~.cpp
source/vMSP/vacosh~/: vacosh~.cpp
source/vMSP/vacos~/: vacos~.cpp
source/vMSP/vasinh~/: vasinh~.cpp
source/vMSP/vasin~/: vasin~.cpp
source/vMSP/vatanh~/: vatanh~.cpp
source/vMSP/vatan~/: vatan~.cpp
source/vMSP/vatodb~/: vatodb~.cpp
source/vMSP/vcosh~/: vcosh~.cpp
source/vMSP/vcosx~/: vcosx~.cpp
source/vMSP/vdbtoa~/: vdbtoa~.cpp
source/vMSP/vdiv~/: vdiv~.cpp
source/vMSP/vequals~/: vequals~.cpp
source/vMSP/vftom~/: vftom~.cpp
source/vMSP/vgreaterthaneq~/: vgreaterthaneq~.cpp
source/vMSP/vgreaterthan~/: vgreaterthan~.cpp
source/vMSP/vlessthaneq~/: CMakeLists.txt  vlessthaneq~.cpp
source/vMSP/vlessthan~/: vlessthan~.cpp
source/vMSP/vlog~/: CMakeLists.txt  vlog~.cpp
source/vMSP/vmaximum~/: vmaximum~.cpp
source/vMSP/vminimum~/: vminimum~.cpp
source/vMSP/vminus~/: vminus~.cpp
source/vMSP/vmtof~/: vmtof~.cpp
source/vMSP/vnotequals~/: vnotequals~.cpp
source/vMSP/vplus~/: vplus~.cpp
source/vMSP/vpow~/: vpow~.cpp
source/vMSP/vrdiv~/: vrdiv~.cpp
(+8 files in other folders)
